generated/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: gameforge
    app.kubernetes.io/version: 1.0.0
  name: gameforge
