generated/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    app.kubernetes.io/component: service
    app.kubernetes.io/name: frontend
  name: frontend
  namespace: gameforge
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - env: []
        image: gcr.io/distroless/nodejs18-debian11
        name: frontend
        ports:
        - containerPort: 3000
          name: http
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsUser: 1001
