generated/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/name: redis
  name: redis
  namespace: gameforge-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - env: []
        image: redis:7-alpine
        name: redis
        ports:
        - containerPort: 6379
          name: redis
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        volumeMounts:
        - mountPath: /data
          name: redis-data
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsUser: 1001
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-redis-data
