generated/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
  namespace: gameforge-prod
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: backend
