generated/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: gameforge-prod
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: frontend
